Closed
Bug 54747
Opened 25 years ago
Closed 25 years ago
<tabcontrol><tabbox> crashes in nsXBLPrototypeBinding::LocateInstance
Categories
(Core :: XBL, defect, P3)
Core
XBL
Tracking
()
VERIFIED
FIXED
People
(Reporter: jrgmorrison, Assigned: danm.moz)
References
Details
(Keywords: classic, crash, perf)
Attachments
(1 file)
|
292 bytes,
text/xul
|
Details |
per bug 53116, there is a crash when you do "Tasks -> Privacy & Security ->
Cookie Manager -> View Stored Cookies" with the **trunk** windows build
2000-09-29-M18. This does not occur on the branch.
The crash occurs in nsXBLPrototypeBinding::LocateInstance according to
talkback, which is new code that hyatt put on the trunk. This is however
code that we very likely want to land on the branch after nsbeta3, as it
produces some very big improvements in mailnews performance.
Steps to reproduce:
1) with a trunk build, do 'Tasks -> Privacy & Security ->
Cookie Manager -> View Stored Cookies'
2) crash
Nominating rtm and setting bug 53417 dependent on this bug. If this is to
be landed on the branch, we need to solve this crash.
Talkback stack trace:
nsXBLPrototypeBinding::LocateInstance
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLPrototypeBinding.cpp, line
528]
nsXBLPrototypeBinding::GetSingleInsertionPoint
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLPrototypeBinding.cpp, line
447]
nsXBLBinding::GetSingleInsertionPoint
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLBinding.cpp, line 1407]
nsXBLService::GetContentList
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLService.cpp, line 725]
nsCSSFrameConstructor::CreateAnonymousFrames
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 5287]
nsCSSFrameConstructor::ConstructXULFrame
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 6162]
nsCSSFrameConstructor::ConstructFrameInternal
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 7530]
nsCSSFrameConstructor::ConstructFrameInternal
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 7503]
nsCSSFrameConstructor::ConstructFrame
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 7441]
nsCSSFrameConstructor::ContentInserted
[d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp,
line 8791]
StyleSetImpl::ContentInserted
[d:\builds\seamonkey\mozilla\layout\base\src\nsStyleSet.cpp, line 1147]
PresShell::ContentInserted
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 3678]
nsXBLBindingRequest::DocumentLoaded
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLService.cpp, line 157]
nsXBLStreamListener::Load
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLService.cpp, line 375]
nsEventListenerManager::HandleEvent
[d:\builds\seamonkey\mozilla\layout\events\src\nsEventListenerManager.cpp, line
1325]
nsDocument::HandleDOMEvent
[d:\builds\seamonkey\mozilla\layout\base\src\nsDocument.cpp, line 3046]
nsXMLDocument::EndLoad
[d:\builds\seamonkey\mozilla\layout\xml\document\src\nsXMLDocument.cpp, line
623]
nsXMLContentSink::DidBuildModel
[d:\builds\seamonkey\mozilla\layout\xml\document\src\nsXMLContentSink.cpp, line
273]
CWellFormedDTD::DidBuildModel
[d:\builds\seamonkey\mozilla\htmlparser\src\nsWellFormedDTD.cpp, line 315]
nsParser::DidBuildModel
[d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 1426]
nsParser::ResumeParse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp,
line 1941]
nsParser::OnStopRequest
[d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 2390]
nsXBLStreamListener::OnStopRequest
[d:\builds\seamonkey\mozilla\layout\xbl\src\nsXBLService.cpp, line 284]
nsJARChannel::OnStopRequest
[d:\builds\seamonkey\mozilla\netwerk\protocol\jar\src\nsJARChannel.cpp, line
703]
nsOnStopRequestEvent::HandleEvent
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsAsyncStreamListener.cpp, line
302]
nsStreamListenerEvent::HandlePLEvent
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsAsyncStreamListener.cpp, line
106]
PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 576]
PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 512]
_md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 1046]
| Reporter | ||
Updated•25 years ago
|
Comment 3•25 years ago
|
||
So, Bookmarks Properties crashes also (bug 54494), and so does the About dialog
when I set it to be modal from the debug prefs. Seems like any dialog with a
<tabcontrol> will crash, doing further testing to confirm this...
Severity: normal → critical
Keywords: crash
Summary: "View Stored Cookies" crashes in nsXBLPrototypeBinding::LocateInstance → Dialogs with <tabcontrol> crash in nsXBLPrototypeBinding::LocateInstance
Comment 4•25 years ago
|
||
Comment 5•25 years ago
|
||
attached a testcase which crashes for me (same stack). contents of it are:
<?xml version="1.0"?>
<window xmlns:html="http://www.w3.org/1999/xhtml"
xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
<?xml-stylesheet href="chrome://communicator/skin/" type="text/css"?>
<tabcontrol>
<tabbox>
</tabbox>
</tabcontrol>
</window>
doesn't crash without the <tabbox></tabbox>
Summary: Dialogs with <tabcontrol> crash in nsXBLPrototypeBinding::LocateInstance → <tabcontrol><tabbox> crashes in nsXBLPrototypeBinding::LocateInstance
Comment 6•25 years ago
|
||
cc'ing beppe because if you have the edit mode toolbar (which consists of tabs)
shown in Composer, Composer crashes upon opening.
also: note that this seems to be a classic-only problem, as far as I can tell.
Or did you see this in modern also, John?
Keywords: classic
| Reporter | ||
Comment 7•25 years ago
|
||
Yes, this appears to be in Classic only, for the shared Classic skin for win32
and linux. I don't see it in (mac/linux/win32)+Modern, or in Mac Classic, for
builds on the trunk.
Comment 10•25 years ago
|
||
This is a dup of a bugscape bug that has been rtm+. danm has a patch.
reassigning to him.
Assignee: hyatt → danm
| Assignee | ||
Comment 11•25 years ago
|
||
GetInsertionPoint wanted a guard against null entries in the insertion point
table.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 12•25 years ago
|
||
*** Bug 54951 has been marked as a duplicate of this bug. ***
Comment 13•25 years ago
|
||
Does this happen in the branch builds (after 9-29)?
This is marked fixed - is this fixed for branch?
Thanks.
| Reporter | ||
Comment 14•25 years ago
|
||
The code that could result in the crash has never been landed on the branch.
So this is neither fixed nor broken on the branch. (I'm feeling dizzy).
Comment 15•25 years ago
|
||
well, hold on. kin said he's positive he sees (or saw) bug 54951 in a branch
build, and said someone else did also. what's going on? was 53417 snuck into
the branch?
| Assignee | ||
Comment 16•25 years ago
|
||
John is correct. At time of writing, there is no nsXBLPrototypeBinding object in
the Netscape_20000922_BRANCH, so the stack trace given in bug 54951 had to come
from the trunk.
Comment 17•25 years ago
|
||
*** Bug 55118 has been marked as a duplicate of this bug. ***
Comment 18•25 years ago
|
||
Thanks. This should be verified in the trunk only then. I just got confused
since it was nominated for rtm :-)
Keywords: vtrunk
Comment 19•25 years ago
|
||
Let's just verify this in the trunk and the branch, since (although this got
fixed first), 53417 was just fixed in the branch also.
Keywords: vtrunk
| Assignee | ||
Comment 20•25 years ago
|
||
Har. Yup, the code that caused this bug has now been moved to Netscape's rtm
branch as well. So while we expect that this trunk fix will never be a problem on
the branch, it now deserves verification there, too.
Comment 21•25 years ago
|
||
*** Bug 60177 has been marked as a duplicate of this bug. ***
Comment 22•25 years ago
|
||
*** Bug 60177 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 23•25 years ago
|
||
verified fixed (and dead, and I suck).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•