guard against null entries in the insertion point table. bug 54747, bugscape bug 2641. r=hyatt